# gh-pr-manager

./: AGENTS.md  PLAN.md  PROGRESS.md  README.md  config.json  main.py  minimal_textual_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.json  config.json.bak
src/gh_pr_manager/: __main__.py  github_client.py  main.css  main.py  utils.py
src/gh_pr_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/textual/: __init__.py  app.py  containers.py  pilot.py  widgets.py
src/textual/css/: query.py
tests/: conftest.py  test_app_pr_flow.py  test_app_smoke.py  test_branch_actions.py  test_config_and_branch.py  test_full_integration.py  test_github_client.py  test_org_repo_flow.py  test_repo_selection.py  test_ui_flow.py
